Propagate ROI changes